--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,23 @@
 {
   "name": "btb2",
   "description": "",
+  "manifest_version": 2,
   "version": "1.0.0",
-  "manifest_version": 3,
-  "action": {
-    "default_popup": "popup.html"
+  "icons": {
+    
   },
-  "service_worker": {
-    "script": "background.js",
-    "background": {
-      "service_worker": "background.js"
-    }
+  "browser_action": {
+      "default_popup": "popup.html"
   },
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
   "content_scripts": [
     {
+      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
       "js": [
         "content.js"
       ]
