--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.3",
     "prettier": "^2.5.1",
     "react-hot-loader": "^4.13.0",
     "ts-loader": "^8.0.5",
@@ -40,6 +41,8 @@
   },
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   }
 }
