--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "trailingComma": "all",
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": false,
+  "semi": false,
+  "singleQuote": true,
   "jsxSingleQuote": false,
   "bracketSpacing": true,
   "bracketSameLine": true,
