--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/chrome": "0.0.125",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.2.1",
     "eslint": "^8.5.0",
@@ -36,8 +37,11 @@
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "konva": "^8.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^16.14.0",
+    "react-konva": "^18.2.5",
+    "styled-components": "^5.3.8"
   },
   "scripts": {
     "start": "webpack serve",
