--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^16.14.0",
     "react-konva": "^18.2.5",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.8"
   },
   "scripts": {
