--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "styled-components": "^5.3.8"
   },
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack --watch --progress",
     "build": "webpack",
     "prepare": "husky install",
     "pre-commit": "lint-staged",
