--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
     "husky": "^8.0.3",
     "prettier": "^2.5.1",
     "react-hot-loader": "^4.13.0",
@@ -44,7 +45,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.5",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "use-image": "^1.1.1"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve",
