--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
-      "@components": ["src/components/index"]
+      "@components": ["src/components/index"],
+      "@lib": ["src/lib/index"],
+      "@types": ["src/types/index"]
     }
   },
   "include": ["./src/**/*", "src/type.d.ts"]
