chore: alias 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "paths": {
       "@components": ["src/components/index"],
       "@lib": ["src/lib/index"],
+      "@static": ["src/static/index"],
+      "@public/*": ["public/*"],
       "@types": ["src/types/index"]
     }
   },
