--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.2.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
@@ -33,8 +35,6 @@
     "ts-loader": "^8.0.5",
     "typescript": "^4.5.4",
     "url-loader": "^4.1.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.7.2"
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.5",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.8",
     "use-image": "^1.1.1"
   },
