--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "paths": {
       "@components": ["src/components/index"],
-      "@lib": ["src/lib/index"],
+      "@recoil": ["src/recoil/index"],
       "@types": ["src/types/index"]
     }
   },
