Recoil 적용 및 복수의 컴포넌트 효과가 동시에 나타나도록 기능 수정 (#16)
* feat: recoil 설치

* refactor: fireworks 컴포넌트 디렉토리 이동

* feat: recoil alias 추가

* feat: Highlighter Atom

* feat: Highlighter 컴포넌트 Atom 적용

* feat: 각각의 컴포넌트를 호출하는 Workbench 컴포넌트

* chore: Stamp console.log 제거 및 배열 순회 key 추가

* chore: stageRef nullable하도록 수정

* chore: Highlighter unused import 제거

* feat: Stamp Recoil 적용

* feat: AntGroup Recoil 적용

* chore: resolve conflict ant

* fix: resolve conflict ant

* fix: resolve highlighter conflict

* feat: bubble wip

---------

Co-authored-by: ingong <insong.lee@webtoonscorp.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "paths": {
       "@components": ["src/components/index"],
+      "@recoil": ["src/recoil/index"],
       "@lib": ["src/lib/index"],
       "@static": ["src/static/index"],
       "@public/*": ["public/*"],
