--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@lib": ["src/lib/index"],
       "@static": ["src/static/index"],
       "@public/*": ["public/*"],
-      "@types": ["src/types/index"]
+      "@types": ["src/types/index"],
+      "@hooks": ["src/hooks/index"]
     }
   },
   "include": ["./src/**/*", "src/type.d.ts"]
