--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@static": ["src/static/index"],
       "@public/*": ["public/*"],
       "@types": ["src/types/index"],
-      "@hooks": ["src/hooks/index"]
+      "@hooks": ["src/hooks/index"],
+      "@styles": ["src/styles/index"]
     }
   },
   "include": ["./src/**/*", "src/type.d.ts"]
